--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
   "scripts": {
     "dev": "nodemon ./src/server.js",
     "actions": "cross-env NODE_ENV=test DB_USER=kenzie DB_PASSWORD=kenzie jest --forceExit",
-    "test": "cross-env NODE_ENV=test DB_USER=seu-usuário DB_PASSWORD=sua-senha jest --verbose --forceExit"
+    "test": "cross-env NODE_ENV=test DB_USER=yuor_user DB_PASSWORD=your_password jest --verbose --forceExit"
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "jest": "^28.0.2",
     "pg": "^8.8.0",
-    "supertest": "^6.2.3"
+    "supertest": "^6.2.3",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20",
+    "sucrase": "^3.29.0"
   }
 }
